# AlloViz

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  MANIFEST.in  MANIFESTing  README.md  README.rst  __init__.py  apt.txt  conda.txt  conda_environment.txt  conda_explicit.txt  conda_minimal.txt  environment.txt  environment.yml  environment_faster.txt  example.ipynb  pip_requirements.txt  postBuild  pyproject.toml  requirements.txt  setup.py  table.html  test.ipynb  tutorial.ipynb  utils.py
.binder/: .dockerignore  environment.yml  postBuild
.github/workflows/: test.yml  test_conda.yml  test_conda.yml_no  test_conda_newenv.yml  test_conda_win.yml  test_pip.yml  test_pip.yml_no  test_pip_simple.yml  test_pip_tcl.yml  test_pip_tcl_macos.yml  test_pip_tcl_macos.yml_no  test_pip_tcl_ubuntu.yml  test_pip_tcl_ubuntu.yml_no  test_pip_tcl_ubuntu_newenv.yml  test_pip_tcl_windows.yml  test_pip_tcl_windows.yml_no
AlloViz/: AlloViz.py  Classes.py  Pkgs.py  __init__.py  trajutils.py  utils.py
Classes/: Data.py  Edges.py  Pair.py  State.py  __init__.py
Pkgs/: Corrplus.py  Dynetan.py  Getcontacts.py  MDTASK.py  Pkgs.py  Pytraj.py  __init__.py
alloviz/: Classes.py  Pkgs.py
binder/: apt.txt
dev/: README.md_bu  cloudconvert_README.rst  conda_development.txt  conda_explicit.txt  conda_explicit_oldnetworkx.txt  conda_nocoffee.txt  conda_nover_toexpl.txt  conda_novers.txt  dev_env.txt  dev_env.yml  dev_env_meta.yml  dev_env_nover_reduced.txt  dev_env_nover_reduced_pip.txt  dev_env_ubuntu.yml  development.txt  gpcrmd_dicts.py  setup.py_old  win_env.yml
docs/: docs_requirements.txt
docs/source/: API.rst  README.rst  api.rst  arrestin.rst  conf.py  example.ipynb  example.nblink  index.rst  notebooks.rst  table.rst  tutorial.nblink  tutorials.rst  usage.rst
docs/source/API/: AlloViz.Delta.rst  generate.rst  index.rst
docs/source/_static/css/: custom.css
docs/source/_templates/autosummary/: README.md  attribute.rst  class.rst  member.rst
docs/source/_unused_templates/autosummary/: base.rst  method.rst
docs/source/notebooks/: gui.rst
docs/source/tutorials/: delta.nblink  gui.rst  networkx.nblink  quickstart.nblink
gui/: Makefile  PROTOCOL.md  TODO.md  alloviz_gui.py  alloviz_main.ui  alloviz_main_ui.py  alloviz_mainwindow.ui  alloviz_mainwindow_ui.py  alloviz_vmd.tcl  alloviz_vmd_pipe.tcl  pkgIndex.tcl  run-osx.sh  run.sh  run.tcl  run_standalone.sh  test_socket.tcl  tree-test.py  untitled.ui  vmdcollab.tcl
notebooks/: DESRES_analysis.ipynb  delta.ipynb  networkx.ipynb  quickstart.ipynb  tutorial.ipynb_bu
notebooks/data/pytraj_CA/Spatially_distant/: edges_btw.pq  nodes_btw.pq
notebooks/data/pytraj_CA/raw/: 1.pq
run/: GPCRmd_dictionaries.py  GPCRmd_dictionaries_shiva.py  rsync.py  rsync_shiva.py  send.py  send_shiva.py  work.py  work_shiva.py
src/: __init__.py
src/AlloViz/: Classes.py  Pkgs.py  __init__.py  utils.py
src/AlloViz/AlloViz/: Analysis.py  Classes.py  Elements.py  Filtering.py  Visualization.py  __init__.py  info.py  trajutils.py  utils.py
src/AlloViz/Wrappers/: AlloViz.py  AlloViz_w.py  Base.py  CARDS_w.py  GSAtools.py  GetContacts.py  GetContacts_w.py  MDEntropy.py  MDEntropy_w.py  MDTASK.py  MDTASK_w.py  Pkgs.py_bu  PyInteraph2.py  PyInteraph2_w.py  __init__.py  correlationplus.py  correlationplus_w.py  dynetan.py  dynetan_w.py  gRINN.py  gRINN_w.py  g_correlation.py  g_correlation_w.py  pytraj.py  pytraj_w.py
test/: README.md  cannot_test_pipeline.py  test_downloads.py  test_functions.py  test_pipeline.py  test_submodules.py
test/data/: traj_1.xtc  traj_2.xtc  traj_3.xtc
test/data/AlloViz_Chi4/raw/: 1.pq
test/data/CARDS_MI_Phi/raw/: 1.pq
test/data/COM_trajs/: 1.xtc
test/data/GetContacts/raw/: 1.pq
test/data/MDEntropy_AlphaAngle/raw/: 1.pq
test/data/MDEntropy_Phi/raw/: 1.pq
test/data/MDTASK/raw/: 1.pq
test/data/PyInteraph2_Atomic_Contacts_Occurrence/raw/: 1.pq
test/data/PyInteraph2_COM_Contacts_Corrected/raw/: 1.pq
test/data/PyInteraph2_Contacts/raw/: 1.pq
test/data/PyInteraph2_Energy/raw/: 1.pq
test/data/correlationplus_Backbone_Dihs/raw/: 1.pq
test/data/correlationplus_Backbone_Dihs_Max/raw/: 1.pq
test/data/correlationplus_CA_LMI/raw/: 1.pq
test/data/correlationplus_COM_LMI/raw/: 1.pq
test/data/correlationplus_Phi/raw/: 1.pq
test/data/correlationplus_Psi/raw/: 1.pq
test/data/dynetan/raw/: 1.pq
test/data/pytraj_CB/raw/: 1.pq
toni/: Toni.ipynb  env-export-from-history.yaml  issue1.py  issues.md  note.md
