[build-system]
requires = [
    "setuptools >= 61",
    "numpy",
    "Cython",
]
build-backend = 'setuptools.build_meta'




[project]
name = "AlloViz"
description = "A Python package to interactively computate, analyze and visualize protein allosteric communication (residue interaction) networks and delta-networks."
authors = [{name = "Francho Nerín-Fonz", email = "francho.nerin01@estudiant.upf.edu"}]
readme = "README.rst"
#dynamic = ["version"]
version = "1.0"

dependencies = [ "vmd-python @ git+https://github.com/frannerin/vmd-python@v3.0.6-macosxarm64" ]

# license = {text = "BSD 3-Clause License"}
classifiers = [
	# "License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Framework :: IPython",
	"Framework :: Jupyter",
	"Framework :: Jupyter :: JupyterLab",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Healthcare Industry",
	"Topic :: Scientific/Engineering :: Bio-Informatics"
]




[tool.setuptools.package-dir]
AlloViz = "src/AlloViz"
"AlloViz.Packages" = "src/Packages"
pyinteraph = "src/Packages/pyinteraph2/pyinteraph"
libinteract = "src/Packages/pyinteraph2/libinteract"
msmbuilder = "src/Packages/msmbuilder/msmbuilder"
enspara = "src/Packages/enspara/enspara"



[tool.setuptools]
packages = [
	"AlloViz", "AlloViz.AlloViz", "AlloViz.Wrappers", "AlloViz.Packages",
	"pyinteraph", "libinteract", 
	"msmbuilder", "enspara"
]






[tool.pytest.ini_options]
env = [
    "test = test"
]



[tool.poetry]
name = "AlloViz"
version = "1.0"
description = "A Python package to interactively computate, analyze and visualize protein allosteric communication (residue interaction) networks and delta-networks."
authors = ["Francho Nerín-Fonz <[francho.nerin01@estudiant.upf.edu]>"]
license = "-"

[tool.poetry.build]
script = "setup.py"
