[build-system]
requires = [
    "setuptools >= 61",
    "numpy",
    "Cython"
]
build-backend = 'setuptools.build_meta'




[project]
name = "AlloViz"
description = "A Python package to interactively computate, analyze and visualize protein allosteric communication (residue interaction) networks and delta-networks."
authors = [{name = "Francho Nerín-Fonz", email = "francho.nerin01@estudiant.upf.edu"}]
readme = "README.rst"
#dynamic = ["version"]
version = "1.0"

dependencies = [
	# removed loose version specifications; messes with readthedocs
	'numpy', # <1.24 # 1.24 removed numpy.int and numpy.float needed for dynetan and PyInteraph2
	'ipywidgets', # <8 # 8 or above messes with nglview
	'jupyterlab', # <4 # 4 or above messes with nglview
	'mdanalysis', # >=2.2,<2.3 # 2.3 or above fails with non-complying "formalcharges" last column of PDBs (GPCRmd PDBs)

	'multiprocess',
	'lazyasd',
	'pandas',
	'pyarrow',
	'numba',
	'networkx',
	'nglview',
	'prody',
	'mdtraj',
	'python-louvain',
	'cython',
	'parmed',
	'h5py',
	'colorama',
	'scikit-learn',
	'tables',
	'vmd-python'
]

# license = {text = "BSD 3-Clause License"}
classifiers = [
	# "License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Framework :: IPython",
	"Framework :: Jupyter",
	"Framework :: Jupyter :: JupyterLab",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Healthcare Industry",
	"Topic :: Scientific/Engineering :: Bio-Informatics"
]




[tool.setuptools.package-dir]
AlloViz = "src/AlloViz"
"AlloViz.Packages" = "src/Packages"
pyinteraph = "src/Packages/pyinteraph2/pyinteraph"
libinteract = "src/Packages/pyinteraph2/libinteract"
msmbuilder = "src/Packages/msmbuilder/msmbuilder"
enspara = "src/Packages/enspara/enspara"



[tool.setuptools]
packages = [
	"AlloViz", "AlloViz.AlloViz", "AlloViz.Wrappers", "AlloViz.Packages",
	"pyinteraph", "libinteract", 
	"msmbuilder", "enspara"
]






[tool.pytest.ini_options]
env = [
    "test = test"
]




[tool.poetry.build]
script = "setup.py"
